--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -71,15 +71,17 @@ h1, h2, h3, h4, h5 {
   
   /* header */
   
-  header nav {
-	display: inline-block;
-	width: 691px;
-	vertical-align: top;
-	margin-top: 35px;
+  header{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid red;
+	justify-content: space-between
+
   }
   
   header nav a {
-	display: inline-block;
+	
 	margin-right: 65px;
 	font-size: 14px;
 	color: gray;
@@ -99,19 +101,21 @@ h1, h2, h3, h4, h5 {
   }
   
   header .logo {
-	display: inline-block;
+	display: flex;
 	margin-top: 25px;
   }
   
   /* cta */
   
   .cta .cta-text {
-	display: inline-block;
-	vertical-align: top;
+	display: flex;
 	font-size: 77px;
-	margin-top: 120px;
-	text-align: center;
-	padding: 0px 75px;
+	border: 1px solid red;
+	flex-direction: column;
+	align-content: space-around;
+	margin: 100px;
+	width: 330px
+
   }
   
   .cta .cta-text button {
@@ -122,6 +126,8 @@ h1, h2, h3, h4, h5 {
 	font-size: 17px;
 	border: 1px solid black;
 	cursor: pointer;
+	
+	
   }
   
   .cta .cta-text button:hover {
@@ -130,8 +136,9 @@ h1, h2, h3, h4, h5 {
   }
   
   .cta img {
-	display: inline-block;
-	margin-top: 69px;
+	display: flex;
+	justify-content: flex-end;
+	border: 1px solid red;
   }
   
   .main-content {
